--- a/files/etc/systemd/system/pymedia@.service
+++ b/files/etc/systemd/system/pymedia@.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Start pymedia %I component
 After=network.target
-Requires=redis.service
-After=redis.service
+Requires=redis-server.service
+After=redis-server.service
 PartOf=pymedia.target
 
 [Service]
