--- a/files/etc/asound.conf
+++ b/files/etc/asound.conf
@@ -1,14 +1,21 @@
 # https://bootlin.com/blog/audio-multi-channel-routing-and-mixing-using-alsalib/
 # https://alsa.opensrc.org/Dshare
 
-# Loopback0
+# the ipc_* config lines in pcm.Loopback* fix an issue where a user
+# (eg. 'io') can't play on the loopback while pipewire/jacktrip (run as another
+# user - eg. 'pw') already plays something.
+# permissions can be checked with the 'ipcs' command line tool
+# another solution is for the app to use the plug: plugin - eg.
+# aplay -D plug:Loopback1_0_c01 ...
 
+
+# -------------------------------------------------------------
+# Loopback0 (defaults to substream 0)
 pcm_slave.loopback0 {
 	pcm "hw:Loopback0,0"
 	rate 44100
 	channels 3	# must match CamillaDSP nb. of capture channels
 }
-
 # first channels (0 + 1) for stereo output (eg. squeezelite)
 pcm.Loopback0_0_c01 {
 	type dshare
@@ -17,7 +24,6 @@ pcm.Loopback0_0_c01 {
 	bindings.0 0
 	bindings.1 1
 }
-
 # third channel (2), used for mono input (eg generating an inaudible tone to
 # keep the subwoofer on)
 pcm.Loopback0_0_c2 {
@@ -27,21 +33,12 @@ pcm.Loopback0_0_c2 {
 	bindings.0 2
 }
 
-
-# Loopback1
-# the ipc_* config lines in pcm.Loopback* fix an issue where a user
-# (eg. 'io') can't play on the loopback while pipewire/jacktrip (run as another
-# user - eg. 'pw') already plays something.
-# permissions can be checked with the 'ipcs' command line tool
-# another solution is for the app to use the plug: plugin - eg.
-# aplay -D plug:Loopback1_0_c01 ...
-
+# -------------------------------------------------------------
+# Loopback1 (defaults to substream 0)
 pcm_slave.loopback1 {
 	pcm "hw:Loopback1,0"
-	channels 3	# must match CamillaDSP nb. of capture channels
+	channels 3
 }
-
-# first channels (0 + 1) for stereo output (eg. pipewire/jacktrip)
 pcm.Loopback1_0_c01 {
 	type dshare
 	ipc_key 4001
@@ -52,9 +49,6 @@ pcm.Loopback1_0_c01 {
 	ipc_gid audio
 	ipc_key_add_uid false
 }
-
-# third channel (2), used for mono input (eg generating an inaudible tone to
-# keep the subwoofer on)
 pcm.Loopback1_0_c2 {
 	type dshare
 	ipc_key 4001
@@ -64,3 +58,27 @@ pcm.Loopback1_0_c2 {
 	ipc_gid audio
 	ipc_key_add_uid false
 }
+
+# -------------------------------------------------------------
+# Loopback2 (defaults to substream 0)
+pcm_slave.loopback2 {
+	pcm "hw:Loopback2,0"
+	rate 44100
+	channels 3
+}
+pcm.Loopback2_0_c01 {
+	type dshare
+	ipc_key 4002
+	slave loopback2
+	bindings.0 0
+	bindings.1 1
+}
+pcm.Loopback2_0_c2 {
+	type dshare
+	ipc_key 4002
+	slave loopback2
+	bindings.0 2
+}
+
+
+
