add static alsa sink

--- a/files/home/pwbt/.config/pipewire/pipewire.conf
+++ b/files/home/pwbt/.config/pipewire/pipewire.conf
@@ -157,6 +157,20 @@ context.objects = [
             node.freewheel  = true
         }
     }
+
+    { factory = adapter
+        args = {
+            factory.name           = api.alsa.pcm.sink
+	    # keep node.name in sync with
+	    # wireplumber/bluetooth.lua.d/80-route_sources_to_alsa.lua
+            node.name              = "alsa-sink-loopback2"
+            node.description       = "Alsa Loopback 2"
+            media.class            = "Audio/Sink"
+            #api.alsa.path          = "hw:Loopback1"
+            api.alsa.path          = "pcm.Loopback2_0_c01"
+            node.suspend-on-idle    = false
+        }
+     }
 ]
 
 context.exec = [
